# flatland

./: .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  Makefile  README  README.transifex  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: alpha.txt  conf.py  containers.txt  datetimes.txt  forms.txt  index.rst  index.txt  intro.rst  intro.txt  markup.rst  project.rst  scalars.txt  schema.txt  signals.rst  signals.txt  spelling_wordlist.txt
docs/_fixtures/jinja/: widgets.html
docs/_templates/: links.html
docs/_themes/flatland/: globaltoc.html  relations.html  theme.conf
docs/patterns/: widgets.rst
docs/schema/: arrays.rst  compound.rst  containers.rst  datetimes.rst  dicts.rst  enums.rst  forms.rst  index.rst  lists.rst  references.rst  scalars.rst  scalars.txt  schema.rst  schema.txt
docs/source/: Makefile  abbrevs.txt  alpha.rst  alpha.txt  api.rst  conf.py  index.rst  index.txt  intro.rst  intro.txt  markup.rst  project.rst  signals.rst  signals.txt  spelling_wordlist.txt  utils.rst
docs/source/_templates/: links.html
docs/source/patterns/: index.rst  widgets.rst
docs/source/schema/: arrays.rst  compound.rst  containers.rst  containers.txt  datetimes.rst  declarative.rst  dicts.rst  enums.rst  exceptions.rst  index.rst  index.txt  lists.rst  properties.rst  references.txt  scalars.rst  schema.rst  traversal.rst
docs/source/templating/: genshi.txt  index.rst  jinja2.rst
docs/source/validation/: basic.rst  builtin.rst  custom.rst  index.rst  index.txt
docs/templating/: genshi.txt  index.txt
docs/validation/: api.rst  basic.rst  custom.rst  index.rst  index.txt
flatland/: __init__.py  _compat.py  compound.py  exc.py  schema.py  signals.py  util.py
flatland/ext/: creditcard.py
flatland/i18n/: flatland.pot
flatland/schema/: __init__.py  base.py  compound.py  container.py  containers.py  declarative.py  forms.py  node.py  paths.py  properties.py  scalar.py  scalars.py  util.py
flatland/util/: __init__.py  _saferef.py  base.py  deferred.py  signals.py  weakrefs.py
flatland/valid/: __init__.py  base.py  containers.py  email.py  network.py  number.py  scalars.py  string.py  urls.py
flatland/validation/: __init__.py  base.py  containers.py  network.py  number.py  scalars.py
requirements.d/: develop.txt
scripts/: sdist  sign-upload-pypi
src/flatland/: __init__.py  _compat.py  util.py
src/flatland/schema/: base.py  paths.py  (+6 more)
tests/: __init__.py  _util.py  richtype.py  schema.py  test_forms.py  test_g.py  test_i18n.py  test_richtypes.py  test_schema.py  test_signals.py  test_utils.py  test_validation.py
tests/genshi/: __init__.py  _util.py  test_context.py  test_directives.py  test_expressions.py  test_tags.py
tests/markup/: _util.py  test_context.py  test_generator.py  test_genshi.py  test_genshi_06.py  test_label_for_radio_checkbox.py  test_tag_context.py  test_tag_forcing.py  test_tag_pairing.py  test_tag_rendering.py  test_transforms.py
tests/schema/: test_arrays.py  test_base.py  test_compound.py  test_constrained.py  test_containers.py  test_declarative.py  test_dicts.py  test_forms.py  test_lists.py  test_paths.py  test_properties.py  test_refs.py  test_scalars.py
tests/valid/: test_containers.py  test_email.py  test_network.py  test_scalars.py  test_signals.py  test_urls.py
tests/validation/: test_containers.py  test_network.py  test_scalars.py  test_signals.py
(+22 files in other folders)
