[build-system]
requires = ["setuptools>=78.1.1", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flatland"
dynamic = ["version"]
description = "HTML form management and validation"
readme = "README"
authors = [
    { name = "Jason Kirtland", email = "jek@discorporate.us" }
]
maintainers = [
    { name = "Thomas Waldmann", email = "tw@waldmann-edv.de" }
]
keywords = ["schema", "validation", "data", "web", "form", "forms", "roundtrip"]
license = "MIT"
license-files = ["LICENSE", "AUTHORS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "blinker",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/discorporate/flatland/"

[tool.setuptools]
packages = { find = { where = ["src"], exclude = ["tests*", "tests"] } }
include-package-data = true

[tool.setuptools_scm]
write_to = "src/flatland/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
env_list = ["py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
deps = [
    "pytest",
    "Sphinx",
    "Genshi",
    "jinja2",
]
commands = [
    ["pytest", "-v"],
    ["sphinx-build", "-b", "doctest", "docs/source", "docs/build"],
]
